--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -4,7 +4,7 @@ name: Build and Deploy to Cloud Run
 on:
   push:
     branches:
-    - master
+    - main
 
 env:
   PROJECT_ID: ${{ secrets.RUN_PROJECT }}
@@ -21,7 +21,7 @@ jobs:
       uses: actions/checkout@v2
 
     # Setup gcloud CLI
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
       with:
         version: '383.0.1'
         service_account_key: ${{ secrets.RUN_SA_KEY }}
