--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -4,7 +4,7 @@ name: Build and Deploy to Cloud Run
 on:
   push:
     branches:
-    - main
+    - master
 
 env:
   PROJECT_ID: ${{ secrets.RUN_PROJECT }}
@@ -21,9 +21,9 @@ jobs:
       uses: actions/checkout@v2
 
     # Setup gcloud CLI
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
+    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
-        version: '383.0.1'
+        version: '290.0.1'
         service_account_key: ${{ secrets.RUN_SA_KEY }}
         project_id: ${{ secrets.RUN_PROJECT }}
 
