--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -17,11 +17,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v0.3.0
+    - name: Deploy service to Cloud Run
+      uses: stefda/action-cloud-run@v1.6
 
     # Setup gcloud CLI
-    - uses:  google-github-actions/setup-gcloud@v0.3.0
+    - uses:  google-github-actions/setup-gcloud@v1.6
       with:
         version: '290.0.1'
         service_account_key: ${{ secrets.RUN_SA_KEY }}
