--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -18,10 +18,10 @@ jobs:
 
     steps:
     - name: Deploy service to Cloud Run
-      uses: actions/checkout@v2
+      uses: actions/checkout@v0
 
     # Setup gcloud CLI
-    - uses:  google-github-actions/setup-gcloud@v2
+    - uses:  google-github-actions/setup-gcloud@master
       with:
         version: '290.0.1'
         service_account_key: ${{ secrets.RUN_SA_KEY }}
