--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -18,12 +18,12 @@ jobs:
 
     steps:
     - name: Deploy service to Cloud Run
-      uses: actions/checkout@v0
+      uses: actions/checkout@v2
 
     # Setup gcloud CLI
-    - uses:  google-github-actions/setup-gcloud@v0
+    - uses:  google-github-actions/setup-gcloud@master
       with:
-        version: '290.0.1'
+        version: '383.0.1'
         service_account_key: ${{ secrets.RUN_SA_KEY }}
         project_id: ${{ secrets.RUN_PROJECT }}
 
