--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -4,7 +4,7 @@ name: Build and Deploy to Cloud Run
 on:
   push:
     branches:
-    - master
+    - main
 
 env:
   PROJECT_ID: ${{ secrets.RUN_PROJECT }}
@@ -18,10 +18,10 @@ jobs:
 
     steps:
     - name: Deploy service to Cloud Run
-      uses: actions/checkout@v2
+      uses: 'google-github-actions/auth@v0'
 
     # Setup gcloud CLI
-    - uses:  google-github-actions/setup-gcloud@master
+    - uses:  google-github-actions/deploy-cloudrun@v0
       with:
         version: '383.0.1'
         service_account_key: ${{ secrets.RUN_SA_KEY }}
