--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -18,10 +18,9 @@ jobs:
 
     steps:
     - name: Deploy service to Cloud Run
-      uses: 'google-github-actions/auth@v0'
-
-    # Setup gcloud CLI
-    - uses:  google-github-actions/setup-gcloud@master
+      uses: action-cloud-run@v1.6
+      # Setup gcloud CLI
+    - uses:  GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
         version: '383.0.1'
         service_account_key: ${{ secrets.RUN_SA_KEY }}
