--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -1,10 +1,11 @@
+
 name: Build and Deploy to Cloud Run
 
 
 on:
   push:
     branches:
-    - main
+    - master
 
 env:
   PROJECT_ID: ${{ secrets.RUN_PROJECT }}
@@ -17,12 +18,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Deploy service to Cloud Run
-      uses: action-cloud-run@main
-      # Setup gcloud CLI
-    - uses:  GoogleCloudPlatform/github-actions/setup-gcloud@master
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    # Setup gcloud CLI
+    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with:
-        version: '383.0.1'
+        version: '290.0.1'
         service_account_key: ${{ secrets.RUN_SA_KEY }}
         project_id: ${{ secrets.RUN_PROJECT }}
 
